src/index.scss
/* ... */
section {
  display: grid;
  grid-template-columns: 1fr 1.4fr;
  column-gap: 160px;
}

.newsletter-callout__container {
  background-color: var(--bg-color-2);
  margin-bottom: 100px;
  padding: 0 20px;
  --section-color: var(--red);

  #newsletter-callout {
    max-width: 840px;
    display: block;
    padding: 60px 0;
    color: var(--body-color);

    .newsletter-callout__heading {
      display: flex;
      margin-bottom: 16px;
      h2 {
        @include subheader;
        align-self: flex-end;
        flex: 1;
        margin: 0;
        margin-right: 20px;
      }
      @include mobile {
        svg {
          height: 48px;
        }
      }
    }
    .newsletter-callout__tagline {
      font-style: italic;
    }
    p {
      margin-top: 0;
      margin-bottom: 30px;
    }
    .newsletter-callout__input {
      display: flex;
      $breakpoint: 600px;
      @media (max-width: $breakpoint) {
        flex-direction: column;
      }
      input {
        flex: 1;
        border: none;
        border-bottom: 2px solid var(--bg-color-3);
        background: var(--bg-color);
        font-family: inherit;
        font-size: inherit;
        padding: 12px;
        transition: border-color 0.2s;

        &:focus {
          outline: none;
          border-bottom-color: var(--section-color);
        }

        &::placeholder {
          color: #95856d;
        }

        @media (max-width: $breakpoint) {
          margin-bottom: 20px;
        }
      }
      button {
        @include subheader-font;
        line-height: 1;
        display: flex;
        align-items: center;
        margin-top: 0;
        background-color: var(--section-color);
        background-image: linear-gradient(
          90deg,
          var(--red) 33.33%,
          var(--purple) 33.33%,
          var(--purple) 66.67%,
          var(--green) 66.67%
        );
        background-size: 300% 100%;
        transition: background-position-x 0.3s;
        color: var(--bg-color);
        border: none;
        padding-left: 20px;

        &:hover,
        &:focus {
          border: none;
          background-position-x: -100%;
        }
        svg {
          fill: var(--bg-color);
          margin-left: 10px;
        }
      }
    }
  }
}

.line-accents-container {
  max-width: var(--content-max-width);
  margin: auto;
  padding-right: 50px;
  position: sticky;
  top: -20px;
  display: flex;
  justify-content: center;

  @media (max-width: $tablet-breakpoint) {
    display: none;
  }

  #line-accents {
    display: flex;
    justify-content: space-between;
    margin-right: 10%;
    border: 2px solid var(--bg-color-3);
    padding: 12px 10px;
    width: 56px;

    * {
      width: 6px;
      position: relative;
      transition: transform 0.5s;
      transform-origin: top;
      height: 28px;
      opacity: 0.8;
    }
    :nth-child(1) {
      background-color: var(--green);
    }
    :nth-child(2) {
      background-color: var(--red);
    }
    :nth-child(3) {
      background-color: var(--purple);
    }
    .active {
      opacity: 1;
      transform: scaleY(14);
    }
  }
}

#inbrief-section {
  .social-links {
    a,
    a:visited {
      display: flex;
      align-items: center;
      color: var(--body-color);
      font-size: 30px;
      margin-bottom: 30px;

      img {
        width: 30px;
        height: 30px;
        margin-right: 20px;
      }

      @media (max-width: $mobile-breakpoint) {
        display: inline-block;
        margin: 0;
        margin-right: 10px;

        span {
          display: none;
        }
      }
    }
  }

  #switch__checkbox {
    position: absolute;
    opacity: 0;
    width: 0;
    height: 0;
  }

  .switch__text {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: var(--bg-color-3);
    @include subheader;
    font-size: 30px;
    cursor: pointer;
    margin-bottom: 20px;

    @media (min-width: $tablet-breakpoint) and (max-width: 1450px) {
      font-size: 28px;
    }

    @media (max-width: $mobile-breakpoint) {
      display: grid;
      grid-template-columns: 1fr, 40px;
      font-size: 30px;
      row-gap: 10px;

      .slider {
        grid-column: 2;
        grid-row: 1 / span 2;
        transform: rotate(90deg);
      }
    }

    .slider {
      position: relative;
      width: 1.5em;
      height: 0.5em;
      border-radius: 0.75em;
      border: 4px solid var(--bg-color-3);
      transition: height 0.2s;
      display: flex;
      align-items: center;
    }

    :hover > .slider {
      height: 0.8em;
      background: repeating-linear-gradient(
        45deg,
        var(--bg-color-3) 0,
        var(--bg-color-3) 25%,
        transparent 0%,
        transparent 50%
      );
      background-size: 35px 35px;
      background-position: 0 0;
      animation: stripe-anim 3s linear infinite;
    }

    .slider::before {
      content: '';
      height: 0.8em;
      width: 0.8em;
      margin: -0.2em;
      background-color: var(--section-color);
      border-radius: 100%;
      transition: transform 0.2s;
    }

    .personal {
      color: var(--section-color);
      font-weight: bold;
    }
  }

  .content__recruiter {
    display: none;
  }

  #switch__checkbox:focus + .switch__text > .slider {
    border: 5px solid var(--section-color);
  }

  #switch__checkbox:checked {
    ~ .switch__text {
      .personal {
        color: inherit;
      }

      .recruiter {
        color: var(--section-color);
        font-weight: bold;
      }

      .slider::before {
        transform: translateX(100%);
      }
    }

    ~ .content__recruiter {
      display: initial;
    }
    ~ .content__personal {
      display: none;
    }
  }
}
/* ... */

